deleted comments and added readme
